# Solar-Lang

./: .gitignore  CMakeLists.txt  README.md  makefile  output.ll  output.s
example/: calc.cpp
src/: error.hpp  error_base.hpp  main.c  main.cpp  solar_lib.hpp  solar_pack.hpp
src/ast/: ast.cpp  ast.h  ast.hpp  ast_error.hpp  env.hpp  nodes.hpp  pack.hpp  parser.cpp  parser.hpp  types.hpp
src/compiler/: compiler.cpp  compiler.hpp  pack.hpp
src/lexer/: lexer.c  lexer.cpp  lexer.h  lexer.hpp  lexer_error.hpp  pack.hpp  tokenizer.cpp  tokenizer.hpp  tokens.cpp  tokens.hpp
src/runtime/: env.hpp  runner.cpp  runner.hpp  runtime.hpp  runtime_error.hpp  value.hpp
src/runtime/evaluate/: expr.cpp  expr.hpp  stmt.cpp  stmt.hpp
test/: script.sun
